--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stikerinbot",
+  "name": "Ollie",
   "version": "1.1.2",
   "description": "WhatsApp Bot Ringan",
   "main": "index.js",
